--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
+    "clipboard": "^2.0.11",
+    "datatables.net": "^1.13.8",
+    "datatables.net-dt": "^1.13.8",
+    "i": "^0.3.7",
+    "jquery": "^3.7.1",
+    "npm": "^10.2.5",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
+    "react-data-table-component": "^7.5.4",
+    "react-datatables": "^0.0.2",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
