--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.0.0",
+    "sweetalert2": "^11.10.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
